AVANNCE INTERFACES CODIGOS - LIBRERIAS JCALENDAR

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaHotel
+application.vendor=Deybi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,18 @@ dist.jar=${dist.dir}/SistemaHotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaHotel
+endorsed.classpath=
 excludes=
+file.reference.itext-2.1.7.jar=librerias-extras\\itext-2.1.7.jar
+file.reference.jcalendar-1.4.jar=librerias-extras/jcalendar-1.4.jar
+file.reference.mysql-connector-j-9.0.0.jar=librerias-extras\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.librerias-extras.classpath}
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +80,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SistemaHotel
-main.class=
+main.class=Principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -81,10 +88,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
