--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,8 +53,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=22
-javac.target=22
+javac.source=24
+javac.target=24
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -84,7 +84,7 @@ main.class=Principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_22
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
