--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,13 +38,15 @@ excludes=
 file.reference.itext-2.1.7.jar=librerias-extras\\itext-2.1.7.jar
 file.reference.jcalendar-1.4.jar=librerias-extras/jcalendar-1.4.jar
 file.reference.mysql-connector-j-9.0.0.jar=librerias-extras\\mysql-connector-j-9.0.0.jar
+file.reference.openpdf-2.2.3.jar=C:\\Users\\ULISES\\Downloads\\openpdf-2.2.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.openpdf-2.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
